# education-platform

./: .gitignore  GEMINI.md  MEMORY_CONTEXT.md  PRIVY_INTEGRATION.md  Presentation-Zerion.md  Presentation.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: copilot-instructions.md
.github/instructions/: privy.instructions.md
anchor/: Anchor.toml  codama-academic.js  codama.js
anchor/migrations/: deploy.ts
anchor/programs/academic_chain/: Cargo.toml  README.md
anchor/programs/academic_chain/src/: constants.rs  errors.rs  lib.rs  state.rs
anchor/programs/academic_chain/src/instructions/: claim_graduation.rs  complete_course.rs  create_course.rs  initialize.rs  mint_certificate.rs  mod.rs  purchase_credits.rs  register_course.rs
anchor/programs/academic_chain/src/utils/: mod.rs  token_operations.rs  validations.rs
anchor/scripts/: README.md  airdrop.ts  create_course.ts  init-simple.ts  initialize-program.ts  mint_test_tokens.ts  test_purchase_credits.js  test_purchase_credits.ts  treasury.json
anchor/src/: eduapp-exports.ts  index.ts
anchor/tests/: academic_chain.test.ts  certificate_minting.test.ts  course_registration.test.ts  eduapp.test.ts  graduation.test.ts  purchase_credits.test.ts  setup.ts
src/app/: globals.css  layout.tsx
src/components/: app-header copy.tsx.privy  app-header.tsx  app-providers copy.tsx.privy  console-warning-filter.tsx  privy-config-diagnostic.tsx  privy-solana-tester.tsx  wallet-troubleshooter.tsx
src/hooks/: useAcademicChain.ts
src/lib/: academic-chain-client.js  academic-chain.ts  (+6 more)
(+114 files in other folders)
