[package]
name = "academic_chain"
version = "0.1.0"
description = "Decentralized academic credit and certification system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "academic_chain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
